test/corpus/1_basics/4_diverts-1.txt
===
.ADA. Knots divert to knots
===
=== back_in_london ===

We arrived into London at 9.45pm exactly.
-> hurry_home

=== hurry_home ===
We hurried home to Savile Row as fast as we could.
---
(ink
	(knot (knot_mark) name: (identifier) (knot_mark))
	(paragraph (text))
	(divert (divert_mark) target: (identifier))
	(knot (knot_mark) name: (identifier) (knot_mark))
	(paragraph (text)))
