test/corpus/1_basics/4_diverts-2.txt
===
.ADB. Diverts are invisible
===
=== hurry_home ===
We hurried home to Savile Row -> as_fast_as_we_could

=== as_fast_as_we_could ===
as fast as we could.
---
(ink
	(knot (knot_mark) name: (identifier) (knot_mark))
	(paragraph
		(text)
		(divert (divert_mark) target: (identifier)))
	(knot (knot_mark) name: (identifier) (knot_mark))
	(paragraph (text))
)
