test/corpus/5_advanced_state_tracking/1_basic_lists.txt
===
.EAA. Define basic lists
===
LIST kettleState = cold, (boiling), recently_boiled
---

(ink
  (content_block
    (list
      name: (identifier)
      values: (list_values
        name: (identifier)
        (lv_init
          name: (identifier))
        name: (identifier)))))
